2002-12-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Implement gtk_dialog_new_with_buttons in Gtk::Dialog#intialize, 
	Gtk::Dialog#add_buttons.
	* sample/misc/dialog.rb, dialog2.rb: Add files.

2002-12-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Gtk::Dialog#add_button accept Gtk::Stock. 
	* src/rbgtkconst.c: Remove GtkCurveType(It was moved to Gtk::Curve). 

2002-12-14  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtksizegroup.c: Add a file.

2002-12-13  Hiroshi IGARASHI  <iga@ruby-lang.org>

	* src/lib/gtk2.rb: move from lib/gtk2.rb and should be installed
	by src/Makefile.

2002-12-13  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtkaccelgroup.c : Fix return value of #lock and #unlock.
	* src/rbgtkinvisible.c : Add a file.
	* src/rbgtkaccelmap.c : Add a file.
	* src/rbgtkaccelgroupentry.c : Fix #accel_path to avoid passing NULL
	to CSTR2RVAL.

2002-12-10  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtkmain.c (Gtk.init): Use gtk_init_check() instead of
	gtk_init(). Preserve sighandlers.

2002-12-10  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtkaccelkey.c: Fix filename in header.

	* src/rbgtkaccelkey.c: Add a file.
	* src/rbgtkaccelgroupentry.c: Add a file.
	* src/rbgtkaccelgroup.c: Add Gtk::AccelGroup#from_object, #connect,
	#connect_by_path, #disconnect_key, #query, #find.
	* src/rbgtkaccellabel.c: Fix filename in header.
	* src/rbgtk.h: Add GTK_TYPE_ACCEL_KEY, GTK_TYPE_ACCEL_GROUP_ENTRY.

2002-12-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkimage.c: Gtk::Image#stock return Symbol instead of String. 

2002-12-09  Hiroshi IGARASHI  <iga@ruby-lang.org>

	* src/rbgtkmain.c (gtk_m_main, gtk_m_main_quit): Thread#join by
	Gtk.main thread isn't needed.

2002-12-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkitemfactory.c: Improve Gtk::ItemFactory#create_item/s.
	Add Gtk::ItemFactory#popup.
	* sample/misc/itemfactory.rb, itemfactory2.rb: Add samples. 
